--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,6 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6"
-  }
+  },
+   "type": "module"
 }
