--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6"
   },
-   "type": "module"
+  "type": "module"
 }
